--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Matthew W. Abruzzo"
-  avatar           : "profile_photo.png"
+  avatar           : "profile-photo.jpg"
   bio              : "Astronomy PhD Candidate"
   location         : "New York, NY"
   employer         : "Columbia University"
