--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Matthew W. Abruzzo"
   avatar           : "profile-photo.jpg"
-  bio              : "Astronomy PhD Candidate"
-  location         : "New York, NY"
-  employer         : "Columbia University"
+  bio              : "Astronomy PhD"
+  location         : "Pittsburgh, PA"
+  employer         : "Postdoc at University of Pittsburgh"
   pubmed           :
   googlescholar    :
   email            : matthewabruzzo@gmail.com
@@ -103,7 +103,7 @@ author:
   impactstory      :
   lastfm           :
   linkedin         :
-  orcid            : #"http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-7918-3086"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
