--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Matthew W. Abruzzo"
+  name             : "Matthew W. Abruzzo Ph.D."
   avatar           : "profile-photo.jpg"
-  bio              : "Astronomy PhD"
+  bio              : "Computational Astrophysicist \ Postdoctoral Associate"
   location         : "Pittsburgh, PA"
-  employer         : "Postdoc at University of Pittsburgh"
+  employer         : "University of Pittsburgh"
   pubmed           :
   googlescholar    :
   email            : matthewabruzzo@gmail.com
