--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Matthew W. Abruzzo"
 title_separator          : "-"
 name                     : &name "Matthew W. Abruzzo"
 description              : &description "Astrophysicist"
-url                      : https://mabruzzo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://matthewabruzzo.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mabruzzo/mabruzzo.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
